# mortician

./: .gitignore  DOCS.md  LICENSE  README.md  README.next.md  TODO.md  pyproject.toml
examples/: README.md  asciinema-hiring-demo.sh
examples/cdnburn-mobile-checkout-failure-during-cdn-rule-drift/: actions.yaml  index.md  meta.yaml  timeline.yaml
examples/knightcapital-dark-algorithm-incident-post-mortem/: actions.yaml  index.md  meta.yaml  timeline.yaml
examples/slowauth-intermittent-login-latency-spike/: actions.yaml  index.md  meta.yaml  timeline.yaml
mortician/: bundle.py  formatter.py  main.py  rich_resolved.py  serve.py  state.py  statuses.py  templates.py  tui_show_render.py  ui.py  utils.py
mortician/static/: index.html
tests/: test_refactor_parity.py
