[project]
name = "mortician"
version = "0.1.0"
description = "A utility for creating and editing postmortems"
authors = [
    { name = "Domenick Galati", email = "domenickgalati@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["postmortem", "analysis", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "watchfiles>=0.21.0",
    "pyyaml>=6.0.0",
    "questionary>=2.0.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]

[project.scripts]
mortician = "mortician.main:main"

[tool.setuptools]
packages = ["mortician"]

[tool.setuptools.package-data]
mortician = ["static/*"]